# venomhook

./: .gitignore  README.md  architecture.md  pyproject.toml
examples/: static_meta.sample.json
ghidra_scripts/: export_staticmeta.py
sample/tests/: test_cli_e2e.py  test_profile.py
setup/: dirs.sh  env.ps1  env.sh  mkdir.ps1
src/venomhook/: __init__.py  cli.py  config.py  dynamic_pipeline.py  ghidra_runner.py  hookspec_builder.py  models.py  orchestrator.py  report.py  runtime_report.py  scoring.py  static_pipeline.py  store.py
tests/: __init__.py  test_orchestrator.py  test_pipeline.py  test_runtime_report.py
